--- a/resources/views/admin/modules/testimonies/form.html
+++ b/resources/views/admin/modules/testimonies/form.html
@@ -1,4 +1,4 @@
-<h1>{{title}}</h1>
+<!--<h1>{{title}}</h1>-->
 
 
 <hr>
@@ -11,9 +11,9 @@
 
 {{status}}
 
-{{ dadosCSV }}
+{{dados}}
 
-<table class="table table-dark">
+<!--<table class="table table-dark">
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -41,7 +41,43 @@
         <td>@twitter</td>
       </tr>
     </tbody>
-  </table>
+  </table>-->
+
+  <main class="app-content">
+    <div class="app-title">
+      <div>
+        <h1><i class="fa fa-upload"></i> CARREGAR BASE BA97</h1>
+        <p></p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="tile">
+          <div class="row">
+
+            <div class="col-lg-12">
+              <form method="post" enctype="multipart/form-data" >
+
+
+                <div class="form-group">
+
+                  <label for="exampleInputFile">Base</label>
+              <input class="form-control-file" id="foto" name="file" type="file" aria-describedby="fileHelp"><small class="form-text text-muted" id="fileHelp"><strong><br> ATENÇÃO </strong><br> PASSO A PASSO PARA SUBIR BASE EM CSV <br><br>1º Seguir a planilha base espelhada no banco de dados <br>2º Converter data para formato americano <br>3º Remover cabeçalho <br>4º Salvar a planilha em formato csv separado por vírgulas <br></small>
+                </div>
+                
+                  </div>
+                </div>
+                <div class="tile-footer">
+            <button class="btn btn-primary" name="sub" type="submit" value="import">Submit</button>
+          </div>
+              </form>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+    </div>
+  </main>
 
 <form method="post">
 
