--- a/resources/views/pages/page.html
+++ b/resources/views/pages/page.html
@@ -1,37 +1,82 @@
 <!doctype html>
 <html lang="en" class="h-100">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/sticky-footer/">
+<head>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <style>
-        main > .container {
-            padding: 60px 15px 0;
-        }
-    </style>
+	<link rel="shortcut icon" href="/resources/images/logo.ico" type="image/x-icon" />
 
-    <title>{{title}}</title>
-  </head>
-  <body class="d-flex flex-column h-100">
+	<!-- Bootstrap CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/sticky-footer/">
 
-    {{header}}
-    
+	<style>
+		main>.container {
+			padding: 60px 15px 0;
+		}
+	</style>
 
-    <main class="flex-shrink-0">
-        <div class="container">
-          {{content}}
-        </div>
-    </main>
-    
-    
-    {{footer}}
+	<title>{{title}}</title>
+</head>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    
-  </body>
+<body class="d-flex flex-column h-100">
+
+	{{header}}
+
+	<main class="d-flex flex-wrap">
+		<div class="container-fluid pb-3">
+			<div class="d-grid gap-3" style="grid-template-columns: 0.5fr 2fr;">
+				<div class="bg-light border rounded-3">
+					<div class="d-flex flex-column flex-shrink-0 p-3 bg-light">
+						<a href="/"
+							class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+							<!-- <svg class="bi pe-none me-2" width="40" height="32">
+								<use xlink:href="#bootstrap"></use>
+							</svg> -->
+							<svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-check-circle" viewBox="0 0 16 16">
+								<path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+								<path d="M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05z"/>
+							  </svg>
+							<span class="fs-4 p-1">Cadastros</span>
+						</a>
+						<hr>
+						<ul class="nav nav-pills flex-column mb-auto">
+							<li class="nav-item">
+								<a href="#" class="nav-link active" aria-current="page">
+									<svg class="bi pe-none me-2" width="16" height="16">
+										<use xlink:href="#home"></use>
+									</svg>
+									Eventos
+								</a>
+							</li>
+							<li>
+								<a href="#" class="nav-link link-dark">
+									<svg class="bi pe-none me-2" width="16" height="16">
+										<use xlink:href="#speedometer2"></use>
+									</svg>
+									BA
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+
+				<div class="bg-light border rounded-3">
+					{{content}}
+				</div>
+			</div>
+		</div>
+	</main>
+
+	{{footer}}
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+		crossorigin="anonymous"></script>
+
+</body>
+
 </html>
