melhoria de layout e limpeza de paginas sem uso

--- a/resources/views/pages/home.html
+++ b/resources/views/pages/home.html
@@ -1,4 +1,12 @@
 <div class="container my-3">
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item"><a href="#">Cadastro</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Eventos</li>
+        </ol>
+    </nav>
+
     <h4 class="mb-3">Billing address</h4>
     <form class="needs-validation" novalidate="">
         <div class="row g-3">
